--- a/src/Pages/Catalog/Catalog.scss
+++ b/src/Pages/Catalog/Catalog.scss
@@ -2,106 +2,107 @@
 @import "../../breakpoints";
 
 .catalog {
+  background-color: $colorWhite;
+
+  .container {
     background-color: $colorWhite;
+  }
 
-    .container {
-        background-color: $colorWhite;
-    }
+  h1 {
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: "Roboto Condensed", sans-serif;
+    margin-top: 20px;
+  }
 
-    h1 {
-        font-size: 36px;
-        font-weight: 700;
-        text-transform: uppercase;
-        font-family: "Roboto Condensed", sans-serif;
-        margin-top: 20px;
-    }
+  li {
+    list-style: none;
+  }
+  .parallax__catalog {
+    background: url("./img/catalog-img.jpg") no-repeat center;
+    background-size: cover;
 
-    li {
-        list-style: none;
-    }
-    .parallax__catalog {
-        background: url('./img/catalog-img.jpg') no-repeat right center;
-        height: 28em;
-    }
+    height: 28em;
+  }
 
-    .catalog__products {
-        min-height: 60vh;
-        padding-bottom: 10px;
-    }
+  .catalog__products {
+    min-height: 60vh;
+    padding-bottom: 10px;
+  }
+  .products-flex {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 10px;
+    row-gap: 10px;
+    // justify-content: space-between;
+    // .catalog__card {
+    //     max-width: 300px;
+    // }
+  }
+
+  //   @media (max-width: $media-width-xl) {
+  //     .products-flex {
+  //       // justify-content: space-between;
+  //       // .catalog__card {
+  //       //     max-width: 280px;
+  //       // }
+  //     }
+  //   }
+  @media (max-width: $media-width-md) {
     .products-flex {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 10px;
-        row-gap: 10px;
-        // justify-content: space-between;
-        // .catalog__card {
-        //     max-width: 300px;
-        // }
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 10px;
+      row-gap: 10px;
+      // justify-content: space-around;
+      // .catalog__card {}
     }
+  }
 
-    @media (max-width: $media-width-xl) {
-        .products-flex {
-            // justify-content: space-between; 
-            // .catalog__card {
-            //     max-width: 280px;
-            // }
-        }
+  @media (max-width: $media-width-sm) {
+    .products-flex {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 10px;
+      row-gap: 10px;
+      // justify-content: space-between;
+
+      // .catalog__card {
+      //     max-width: 250px;
+      // }
     }
-    @media (max-width: $media-width-md) {
-        .products-flex {
-            grid-template-columns: repeat(3, 1fr);
-            column-gap: 10px;
-            row-gap: 10px;
-            // justify-content: space-around;
-            // .catalog__card {}
-        }
+  }
+
+  @media (max-width: $media-width-xs) {
+    .parallax__catalog {
+      background: none;
+      height: 0;
     }
-
-    @media (max-width: $media-width-sm) {
-        .products-flex {
-            grid-template-columns: repeat(2, 1fr);
-            column-gap: 10px;
-            row-gap: 10px;
-            // justify-content: space-between;
-
-            // .catalog__card {
-            //     max-width: 250px;
-            // }
-        }
+    .catalog__products {
+      padding: 5px;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 5px;
+      row-gap: 5px;
     }
+    // .products-flex {
+    //   // justify-content: space-around;
 
-    @media (max-width: $media-width-xs) {
-        .parallax__catalog {
-            background: none;
-            height: 0;  
-        }
-        .catalog__products {
-            padding: 5px;
-            grid-template-columns: repeat(2, 1fr);
-            column-gap: 5px;
-            row-gap: 5px;
-        }
-        .products-flex {
-            // justify-content: space-around;
+    //   // .catalog__card {}
+    // }
+  }
 
-            // .catalog__card {}
-        }
-    }
+  @media (max-width: 320px) {
+    // .catalog__products {
+    //     padding: 5px;
+    //     grid-template-columns: 1fr;
+    //     column-gap: 5px;
+    //     row-gap: 5px;
+    // }
+    // .products-flex {
+    //     justify-content: space-around;
 
-    @media (max-width: 320px) {
-        // .catalog__products {
-        //     padding: 5px;
-        //     grid-template-columns: 1fr;
-        //     column-gap: 5px;
-        //     row-gap: 5px;
-        // }
-        // .products-flex {
-        //     justify-content: space-around;
-
-        //     .catalog__card {
-        //         max-width: 180px;
-        //     }
-        // }
-        
-    }
+    //     .catalog__card {
+    //         max-width: 180px;
+    //     }
+    // }
+  }
 }
